refactor: FileBackedTasksManager переработан в соответствии с ТЗ-6